--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,22 @@
 page-home {
 
 }
+
+.ionAvat{
+    display: inline-block;
+    width:50%;
+}
+.ionAvat img{
+    float: right;
+    border-radius: 50%;
+    margin-right: 25px;
+}
+
+h2.heading{
+    display: inline-block;
+    width: 25%;
+    text-align: center;
+    height: 100%;
+    top: 5px;
+    position: absolute;
+}
